demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-app-service
  namespace: demo-app
  labels:
    app: demo-web-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: demo-web-app
